# Cplus

./: .gitignore  CMakeLists.txt  chapter-00-goal.md  chapter-01-player.md  chapter-02-design.md  chapter-03-herb.md  chapter-04-inventory.md  chapter-06-polymorphism.md  chapter-07-smartptr.md  task.md
Cplus/: chapter-00-goal.md  chapter-01-player.md  chapter-03-herb.md  chapter-04-inventory.md  chapter-05-limits.md  chapter-06-polymorphism.md  chapter-06.5-abstract-inventory.md  chapter-07-smartptr.md
Cplus/src/: Player.cpp  Player.h  main.cpp
Cplus/src/Item/: Item.cpp  Item.h
Cplus/src/Item/Herb/: Herb.cpp  Herb.h
Cplus/src/Item/Key/: Key.cpp  Key.h
CsharpVer/: chapter-00-goal.md  chapter-01-player.md  chapter-02-design.md  chapter-03-herb.md  chapter-04-inventory.md  chapter-05-limits.md  chapter-06-polymorphism.md  chapter-07-smartptr.md
phase1/: phase1.sln
phase1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
windowsDesktop/: README.md  phase2_win32_skeleton.md  phase3_gui_parts.md  phase4_cpp_logic.md  phase5_main_screen.md  phase6_inventory_dialog.md  phase7_code_reading.md  phase8_extensions.md  windows_code_for_junior_high.md  windows_code_glossary.md  windows_desktop_cpp_curriculum.md  windows_desktop_cpp_phase1_guide.md
